-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
6.2.0
-
None
-
-
eaad981c0bd2de5f74114295d47a8893382a6a7f (qt/qtmultimedia/dev) f2353ebdd0c3144e44ca86a45bddf48c36541329 (qt/qtmultimedia/6.2)
Steps to reproduce:
1. Open audiorecorder example
2. Set audio codec on the Audio Codec list
OR
2. Set file type on the File Container list
3. Open the Audio Codec list
OR
3. Open the File Container list
Expected:
Only a supported file types for the selected audio codec should be listed.
OR
Only a supported audio codecs for the selected file type should be listed.
Actual:
All a supported file types and audio codecs are listed even they are not a compatible combination.
eg. on Android
Actual:
Selected file type : Listed Audio Codecs:
Mpeg4Audio AAC, FLAC, Opus
FLAC AAC, FLAC, Opus
Expected:
Selected file type : Listed Audio Codecs:
Mpeg4Audio AAC, FLAC, (if supported VORBIS, MP3)
FLAC FLAC
- mentioned in
-
Page Loading...