Update the matching formats in the audiorecorder and camera examples

The combo boxes should show a list of matching formats/codec that we can
handle give the constraints from the other combo boxes.

Fixes: QTBUG-97839
Pick-to: 6.2
Change-Id: I1a3f66c27f3ede06f188b9320600dde7c561a409
Reviewed-by: André de la Rocha <andre.rocha@qt.io>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>